--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "yes",
   "version": "1.0.0",
-  "description": "Blockchain based Land Registration and transfer of entitlement system where the land ownership and all its details are stored in the Blockchain with zero chances of forgery in ownership.",
+  "description": "Blockchain based House Registration and transfer of entitlement system where the house ownership and all its details are stored in the Blockchain with zero chances of forgery in ownership.",
   "main": "truffle-config.js",
   "directories": {
     "test": "test"
@@ -16,12 +16,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mr-who-0903/land-registry.git"
+    "url": "git+https://github.com/mr-who-0903/house-registry.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/mr-who-0903/land-registry/issues"
+    "url": "https://github.com/mr-who-0903/house-registry/issues"
   },
-  "homepage": "https://github.com/mr-who-0903/land-registry#readme"
+  "homepage": "https://github.com/mr-who-0903/house-registry#readme"
 }
